# mandlebrot

./: .gitignore  Cargo.toml  README.md
src/: main.rs  mandlebrot.rs
