[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
name = "mandlebrot"
version = "0.1.0"

[dependencies]
error-chain = "0.11.0"
futures = "0.1.17"
futures-cpupool = "0.1.8"
hyper = "0.11.15"
image = "0.18.0"
lazy_static = "1.0.0"
num_cpus = "1.8.0"
reset-router = "0.3.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_qs = "0.3.0"
tokio-core = "0.1.12"
